tests/expectations/compiler/function/self_finalize_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372066]: `self.caller` is not a valid operand in an async function call context.
    --> compiler-test:8:30
     |
   8 |         assert_eq(addr, self.caller);
     |                              ^^^^^^
"""]
